kubernetes/wishlist/wishlist-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wishlist-app
  template:
    metadata:
      labels:
        app: wishlist-app
    spec:
      containers:
      - name: wishlist-app
        image: reiounagata/aaw-marketplace-bebas-wishlist:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.25"
            memory: "256Mi"
          limits:
            cpu: "0.5"
            memory: "512Mi"
