kubernetes/wishlist/wishlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-service
spec:
  type: LoadBalancer
  selector:
    app: wishlist-app
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 80
      nodePort: 30004
