kubernetes/wishlist/wishlist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /wishlist/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wishlist-service
            port:
              number: 8004 # Matches the 'port' in the corrected wishlist-service.yaml
